--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -45,6 +45,16 @@ a {
     margin-bottom: 20px;
 }
 
+.time-text {
+    font-size: 0.7rem;
+    color:red;
+    margin-bottom: 0.5rem;
+}
+
+svg {
+    height: 1.5rem;
+}
+
 
 
 
